# Crucible

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
crucible/: __init__.py  __main__.py  cli.py
crucible/dynamic/: fs_monitor.py  net_monitor.py  proc_monitor.py  sandbox.py  tracer.py
crucible/report/: json_report.py  markdown_report.py  mitre.py  scorer.py
crucible/rules/: suspicious.yar
crucible/static/: elf.py  entropy.py  hashes.py  pe.py  strings.py  yara_scan.py
crucible/utils/: filetype.py  logging.py
tests/: test_entropy.py  test_filetype.py  test_fs_monitor.py  test_hashes.py  test_mitre.py  test_package_data.py  test_sandbox.py  test_scorer.py  test_strings.py  test_tracer.py
