[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible"
version = "0.1.0"
description = "Throw a sketchy file at it, get a suspicion score back."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Chase Stone" }]
dependencies = [
    "pefile>=2023.2.7",
    "psutil>=5.9.0",
    "yara-python>=4.3.0",
]

[project.scripts]
crucible = "crucible.cli:main"

[tool.setuptools.packages.find]
include = ["crucible*"]

[tool.setuptools.package-data]
crucible = ["rules/*.yar"]
